# embedded

./: .gitmodules  README.md
1_week/: CMakeLists.txt  README.md
1_week/docs/001_assignment_files/: 0.e349be5da2986b0afea8.js  2.5c4c8d9f455fea0b5ca2.js  28.5d5d5d9244fe443d95aa.js  79.220d7c2c39acd6688dc5.js  en.49.912b945beec952df4b1e.js  en.50.85769ba2060835f960a3.js  en.7.c76ddd45a33ac5a1147a.js  en.71.6a0ec88333ab3d52b55a.js  loader.cff287cc707a3e999dfb.js
1_week/inc/: stats.h
1_week/src/: main.c
2_week/: README.md
2_week/docs/: 002_assignment.html
2_week/docs/002_assignment_files/: en.1.4dbefc5cca82c3101097.js  (+2 more)
2_week/src/: Makefile  sources.mk
3_week/: CMakeLists.txt  README.md
3_week/docs/: 003_assignment.html
3_week/docs/003_assignment_files/: 1.e73648dabbd008dcff00.js  11.53c2a1a2aeaae1c448b9.js  113717.ct.js  2.875432d1541e09fa2a95.js  72.6300de81050ee58febdb.js  81.fc7f08b4ac7abc64fb7b.js  84.5e379ef5796dcd6d1eb4.js  87.a3c89546cf5ba7b3fd67.js  88.2da9a2e1f0b9e180bc7e.js  946401778754875  allStyles.e0dd840827afc17ba45a.css  allStyles.e0dd840827afc17ba45a.js  en.0.b9ddc2a453acad4c5fe6.js  en.18.da041d6b766d5438f42d.js  en.20.1782239bb8356f253b7e.js  en.7.c7f8b032a7b719097926.js  en.73.7ceec419408ebab0547c.js  en.74.9c8bc521c2bbdcc7b570.js  en.77.63ab32db00c2012fc06e.js  en.app.e5f4ecc27a91d4415cc9.js  f(1).txt  gtm.js  loader.a514d0f0e1a2c3986127.js  widget.js
3_week/src/: Makefile  memory  sources.mk
m1/: README.md
m1/docs/: 001_assignment.html
m1/inc/: stats.h
m1/src/: main.c  stats.c
sandbox/: main.c  main.i  main.s
(+11 files in other folders)
